--- a/formularioApostas.html
+++ b/formularioApostas.html
@@ -903,7 +903,7 @@
           </div>
           <div class="summary-item loss">
             <div class="label">Perda Total</div>
-            <div class="value" id="perda-total">R$ 0,00</div>
+            <div class="value" id="perda-total">R$F 0,00</div>
           </div>
           <div class="summary-item balance">
             <div class="label">Saldo Total</div>
